Addressing vulnerabilities